--- a/partials/projects-list.html
+++ b/partials/projects-list.html
@@ -1,4 +1,4 @@
-<h1>partials/projects-list.html</h1>
+<pre>partials/projects-list.html</pre>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2">
