--- a/partials/projects-detail.html
+++ b/partials/projects-detail.html
@@ -1,23 +1,24 @@
-<h1>partials/projects-detail.html</h1>
-<p><pre>projects = {{projects}}</pre></p>
+<pre>partials/projects-detail.html</pre>
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span2">
-      <!--Sidebar content-->
-      Search: <input ng-model="query">
-      Sort by:
-      <select ng-model="orderProp">
-        <option value="name">Alphabetical</option>
-        <option value="age">Newest</option>
-      </select>
-    </div>
     <div class="span10">
       <!--Body content-->
-      <ul class="phones">
-        <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
-          <p><pre>projects = {{projects}}</pre></p>
-        </li>
-      </ul>
+	  ProjectId: <input ng-model="projectId">
+	  <pre>{{project}}</pre>
+	  <pre>{{project._id}}</pre>
+	  <pre>{{project.name}}</pre>
+	  <pre>{{project.cognome}}</pre>
+	  
+	  <div >
+			<form novalidate class="simple-form">
+				Name: <input type="text" ng-model="project.name" /><br />
+				Cognome: <input type="text" ng-model="project.cognome" /><br />
+				<button ng-click="reset()">RESET</button>
+				<button ng-click="save(project)">SAVE</button>
+			</form>
+			<pre>projects = {{projects}}</pre>
+		</div>
+
     </div>
   </div>
 </div>
